--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Sriram Narayanan"
   # pronouns         : # example: "He/His"  
-  bio              : "P.h.D. Candidate at the Ohio State University gradauting in SP-2025"
+  bio              : "Ph.D. Candidate at the Ohio State University gradauting in SP-2025"
   location         : "Columbus, OH"
   employer         : "The Ohio State University"
   uri              : # URL
